Initial integration setup

--- a/custom_components/sandman_doppler/translations/fr.json
+++ b/custom_components/sandman_doppler/translations/fr.json
@@ -5,16 +5,16 @@
                 "title": "Blueprint",
                 "description": "Si vous avez besoin d'aide pour la configuration, regardez ici: https://github.com/custom-components/integration_blueprint",
                 "data": {
-                    "username": "Identifiant",
+                    "email": "Email",
                     "password": "Mot de Passe"
                 }
             }
         },
         "error": {
-            "auth": "Identifiant ou mot de passe erroné."
+            "auth": "Email ou mot de passe erroné."
         },
         "abort": {
-            "single_instance_allowed": "Une seule instance est autorisée."
+            "already_configured": "Le compte est déjà configuré"
         }
     },
     "options": {
