--- a/custom_components/sandman_doppler/translations/en.json
+++ b/custom_components/sandman_doppler/translations/en.json
@@ -2,19 +2,18 @@
     "config": {
         "step": {
             "user": {
-                "title": "Blueprint",
-                "description": "If you need help with the configuration have a look here: https://github.com/custom-components/integration_blueprint",
+                "title": "Sandman Doppler",
                 "data": {
-                    "username": "Username",
+                    "email": "Email",
                     "password": "Password"
                 }
             }
         },
         "error": {
-            "auth": "Username/Password is wrong."
+            "auth": "Email/Password is wrong."
         },
         "abort": {
-            "single_instance_allowed": "Only a single instance is allowed."
+            "already_configured": "Account is already configured"
         }
     },
     "options": {
