--- a/custom_components/sandman_doppler/translations/en.json
+++ b/custom_components/sandman_doppler/translations/en.json
@@ -1,29 +1,35 @@
 {
     "config": {
-        "step": {
-            "user": {
-                "data": {
-                    "email": "Email",
-                    "password": "Password"
-                }
-            }
-        },
-        "error": {
-            "auth": "Email/Password is wrong."
-        },
-        "abort": {
-            "already_configured": "Account is already configured"
+      "step": {
+        "user": {
+          "data": {
+            "email": "Email",
+            "password": "Password"
+          }
         }
+      },
+      "error": {
+        "auth": "Email/Password is wrong."
+      },
+      "abort": {
+        "already_configured": "Account is already configured"
+      }
     },
     "options": {
-        "step": {
-            "user": {
-                "data": {
-                    "binary_sensor": "Binary sensor enabled",
-                    "sensor": "Sensor enabled",
-                    "switch": "Switch enabled"
-                }
-            }
+      "step": {
+        "user": {
+          "data": {
+            "binary_sensor": "Binary sensor enabled",
+            "sensor": "Sensor enabled",
+            "switch": "Switch enabled"
+          }
         }
+      }
+    },
+    "device_automation": {
+      "trigger_type": {
+        "sandman_doppler_button_event": "Button #{subtype} pushed"
+      }
     }
-}
+  }
+  
